k8s-hello-world/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-hello-service
  namespace: hello-nginx
spec:
  selector:
    app: nginx-hello
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
